# eeUVsim_Gazebo

./: README.md
eeuv_sim/: CMakeLists.txt  package.xml
eeuv_sim/data/dynamics/: UCATDynamics.yaml
eeuv_sim/data/rl_setting/: rl_setting.yaml
eeuv_sim/launch/: spawn_Blue.launch.py  spawn_LAUV.launch.py  spawn_UCAT.launch.py
eeuv_sim/scripts/: AUVMotion.py
eeuv_sim/scripts/RL/: RL_Blue.py  RL_LAUV.py  RL_UCAT.py
eeuv_sim/scripts/actuator/: moveFins.py  moveWing.py
eeuv_sim/scripts/dynamics/: finDynamics.py
